@@ -1,6 +1,7 @@
 PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 200?, Version 4.1.0
+- Fixed MySQL extension to work with MySQL 4.0 (Jani)
 - Fixed a crash bug within Cobalt systems. Patch by tomc@tripac.com. (Jani)
 - Now bundling Dan Libby's xmlrpc-epi extension
 - Introduced extension version numbers (Stig)
